--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,10 +1,8 @@
-// done by riverco.de
-@import helpers/index
-@import generated/sprite-svg
-@import generated/index
-@import base/index
-@import lib/index
-@import common
-@import components/index
-@import containers/index
-@import pages/index
+@import "helpers/*.sass"
+@import "base/*.sass"
+@import "generated/*.sass"
+@import "lib/*.sass"
+// @import "pages/*.sass"
+@import "components/*.sass"
+@import "containers/*.sass"
+
