--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,9 +2,7 @@
 @import "base/*.sass"
 @import "generated/*.sass"
 @import "lib/*.sass"
-// @import "pages/*.sass"
-@import "components/*.sass"
-@import "containers/*.sass"
+// @import "components/*.sass"
+@import "blocks/*.sass"
+@import "partials/*.sass"
 
-body
-	background-color: tomato
