--- a/src/sass/helpers/_mixins.sass
+++ b/src/sass/helpers/_mixins.sass
@@ -6,8 +6,8 @@
 	@media only screen and (min-width: $width+ "px")
 		@content
 
-=f($fontsize, $lineheight, $fontweight, $letterspacing)
-	font-family: "sfui"
+=f($fontfamily, $fontsize, $lineheight, $fontweight, $letterspacing)
+	font-family: $fontfamily
 	font-size: $fontsize+px
 	line-height: $lineheight+px
 	font-weight: $fontweight
