--- a/src/templates/backup.html
+++ b/src/templates/backup.html
@@ -4,13 +4,13 @@ title: Index page
 {% extends "layouts/_layout.html" %}
 
 {% block content %}
-	
+
 	{# variable example #}
 	<h1>{{title}}</h1>
 
-	
+
 	{# partial example #}
-	{% include "partials/_header.html" %}
+	{% include "partials/_hero.html" %}
 
 	{# mixin example #}
 	{{mixins.icon('facebook')}}
@@ -18,7 +18,7 @@ title: Index page
 
 	{# data usage example #}
 		{% import "data/data.html" as tests %}
-		
+
 		{% for test in tests.list %}
 		<li>{{test.title}}</li>
 		{% endfor %}
