--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -21,3 +21,5 @@
 	src: url('../fonts/AgencyFBRegular.ttf')
 	font-weight: 300
 	font-style: normal
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap')
