--- a/src/templates/partials/_hero.html
+++ b/src/templates/partials/_hero.html
@@ -1,34 +1,28 @@
 <div class="hero">
 	<div class="hero__container">
 
-		<div class="hero__slider js-home-hero-slider">
+		<div class="hero__slider js-home-hero-slider-1">
 
 			<div class="hero__item">
 				<img src="" alt="" class="hero__bg" />
 				<div class="hero__title">Welcome to Gamesplay </div>
 				<div class="hero__title hero__title--big">Online gaming site</div>
 				<div class="hero__subtitle">Pork chop pastrami meatball, picanha salami capicola drumstick tri-tip flank short loin strip steak prosciutto</div>
-				<a href="" class="hero__action">more About us</a>
+				<a href="" class="hero__action btn"><span>more About us</span></a>
 			</div>
 
-			<div class="slider-controls">
-				<div class="slider-controls__item">01</div>
-				<div class="slider-controls__item">02</div>
-				<div class="slider-controls__item">03</div>
-			</div>
+		</div>
 
-			<div class="hero-socials">
-				<a href="" class="hero-socials__item">
-					<svg></svg>
-				</a>
-				<a href="" class="hero-socials__item">
-					<svg></svg>
-				</a>
-				<a href="" class="hero-socials__item">
-					<svg></svg>
-				</a>
-			</div>
+		<div class="hero-slider-controls js-home-hero-slider-2">
+			<div class="hero-slider-controls__item">01</div>
+			<div class="hero-slider-controls__item active">02</div>
+			<div class="hero-slider-controls__item">03</div>
+		</div>
 
+		<div class="hero-socials">
+			<a href="" class="hero-socials__item">{{mixins.icon('facebook')}}</a>
+			<a href="" class="hero-socials__item">{{mixins.icon('twitter')}}</a>
+			<a href="" class="hero-socials__item">{{mixins.icon('google-plus')}}</a>
 		</div>
 
 	</div>
