--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -3,49 +3,57 @@
 	height: 100vh
 	min-height: 500px
 	display: flex
+	background-color: #151423
 
 	&__container
 		display: flex
 		width: 100%
 		height: 100%
 		padding: 0 15px
+		position: relative
 
 	&__slider
 		display: flex
 		width: 100%
 		height: 100%
 
-
 	&__item
 		width: 100%
 		height: 100%
 		display: flex
+		flex-direction: column
 		justify-content: center
 		align-items: center
 		position: relative
 
 	&__bg
+		pointer-events: none
 		+coverdiv
 		+coverimg
 
 	&__title
 		text-shadow: 0 2px 4.8px rgba(0, 0, 0, 0.3)
 		color: white
-		font-family: "Agency FB"
+		font-family: $fa
+		font-size: 48px
 		font-weight: 700
-		line-height: 95px
+		line-height: 54px
 		text-transform: uppercase
+		text-align: center
 
 		&--big
+			font-size: 96px
+			line-height: 96px
 
 	&__subtitle
+		margin: 40px 0 50px 0
+		text-shadow: 0 2px 4.8px rgba(0, 0, 0, 0.3)
+		color: white
+		font-family: $fr
+		font-size: 20px
+		font-weight: 400
+		line-height: 30px
+		text-align: center
 
 	&__action
 
-.slider-controls
-
-	&__item
-
-.hero-socials
-
-	&__item
