--- a/src/templates/backup.html
+++ b/src/templates/backup.html
@@ -13,7 +13,7 @@ title: Index page
 	{% include "partials/_hero.html" %}
 
 	{# mixin example #}
-	{{mixins.icon('facebook')}}
+	{{mixins.icon('')}}
 
 
 	{# data usage example #}
