upcoming games top

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -3,6 +3,8 @@
 @import "generated/*.sass"
 @import "lib/*.sass"
 // @import "components/*.sass"
+@import "layout/*.sass"
 @import "blocks/*.sass"
+@import "cards/*.sass"
 @import "partials/*.sass"
 
