--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -6,5 +6,6 @@ title: Index page
 {% block content %}
 
 	{% include "partials/_hero.html" %}
+	{% include "partials/_upcoming-games.html" %}
 
 {% endblock %}
