--- a/src/sass/cards/_card-simple.sass
+++ b/src/sass/cards/_card-simple.sass
@@ -20,7 +20,7 @@
 		&:after
 			content: ""
 			+coverdiv
-			background-image: linear-gradient(to right, rgba(64, 216, 221, 0.64) 0%, rgba(146, 82, 234, 0.64) 100%)
+			background-image: $gradient
 			opacity: 0
 			+tr
 	&__img
