--- a/src/templates/partials/_upcoming-games.html
+++ b/src/templates/partials/_upcoming-games.html
@@ -2,7 +2,6 @@
 	<div class="block__container">
 		<div class="block__head">
 			<div class="block__title" data-backword="COMING SOON">UpComing Games:</div>
-			<div class="block__subtitle">Pork chop pastrami meatball, picanha salami capicola drumstick tri-tip flank short loin strip steak prosciutto leberkas jowl fatback. Alcatra kielbasa sausage, turkey short ribs shank bresaola meatball jowl ball tip buffalo.</div>
 		</div>
 		<div class="block__content">
 
@@ -69,7 +68,7 @@
 										</div>
 
 										<div class="card-full__box">
-											<div class="btn">Read more</div>
+											<a href="" class="btn"><span>Read more</span></a>
 											<div class="rating">
 												{% for page in range(0, 5) %}
 												<div class="rating__item"></div>
@@ -80,7 +79,9 @@
 									</div>
 
 									<div class="card-full__col">
-										<img src="" alt="" class="card-full__img" />
+										<div class="card-full__img-container">
+											<img src="" alt="" class="card-full__img" />
+										</div>
 									</div>
 
 								</div>
