--- a/src/sass/layout/_block.sass
+++ b/src/sass/layout/_block.sass
@@ -2,6 +2,7 @@
 	width: 100%
 	background-color: #1E1D32
 	padding: 115px 0 50px 0
+
 	&__container
 		width: 100%
 		max-width: 1200px
@@ -10,6 +11,22 @@
 		display: flex
 		flex-direction: column
 		align-items: center
+
+	&__list
+		display: flex
+		flex-wrap: nowrap
+		overflow: hidden
+		margin: 0 -15px
+		&--2items
+			.block__list-item
+				max-width: 50%
+				flex: 50%
+
+	&__list-item
+		padding: 0 15px
+		max-width: calc(100% / 3)
+		flex: calc(100% / 3)
+
 
 	&__head
 		width: 100%
@@ -54,4 +71,7 @@
 		text-align: center
 
 	&__content
+		width: 100%
 
+	&__action
+		margin-top: 60px
