--- a/src/sass/partials/_rating.sass
+++ b/src/sass/partials/_rating.sass
@@ -1,3 +1,10 @@
 .rating
+	display: flex
+	align-items: center
 
 	&__item
+		@include draw-star(7px, #f9a450)
+		margin-right: 3px
+		&:last-child
+			margin-right: 0
+
