--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -7,5 +7,8 @@ title: Index page
 
 	{% include "partials/_hero.html" %}
 	{% include "partials/_upcoming-games.html" %}
+	{% include "partials/_latest-post.html" %}
+	{% include "partials/_testimonials.html" %}
+	{% include "partials/_screenshots-gallery.html" %}
 
 {% endblock %}
