a liitle js added

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,10 +1,15 @@
 @import "helpers/*.sass"
 @import "base/*.sass"
 @import "generated/*.sass"
-@import "lib/*.sass"
+@import "lib/*"
 // @import "components/*.sass"
 @import "layout/*.sass"
 @import "blocks/*.sass"
 @import "cards/*.sass"
 @import "partials/*.sass"
 
+.btnTO
+	position: fixed
+	right: 15px
+	bottom: 15px
+	transition: none !important
