--- a/src/sass/cards/_card-post.sass
+++ b/src/sass/cards/_card-post.sass
@@ -10,12 +10,14 @@
 		.card-post__tag
 			color: #5c9ddd
 		.card-post__bottom-item-icon
-			fill:
+			svg
+				fill: #5c9ddd
 	&--3
 		.card-post__tag
 			color: #7c69e3
 		.card-post__bottom-item-icon
-			fill:
+			svg
+				fill: #7c69e3
 
 	&__img-container
 		width: 100%
@@ -77,7 +79,6 @@
 		margin-bottom: 30px
 		&:last-child
 			margin-bottom: 0
-
 
 	&__bottom
 		padding: 30px 60px
