--- a/src/sass/helpers/_variables.sass
+++ b/src/sass/helpers/_variables.sass
@@ -7,4 +7,7 @@ $accent2: #9252EA
 $bg: #1e1d32
 $bgd: #181728
 $bgb: #292845
-$gradient: linear-gradient(to right, rgba($accent, 0.64) 0%, rgba($accent2, 0.64) 100%)
+$gradient: linear-gradient(to right, rgba($accent, 0.64) 0%, $accent2 100%)
+
+
+
