--- a/src/sass/partials/_rating.sass
+++ b/src/sass/partials/_rating.sass
@@ -3,8 +3,14 @@
 	align-items: center
 
 	&__item
-		@include draw-star(7px, #f9a450)
+		width: 14px
+		min-width: 14px
+		height: 14px
 		margin-right: 3px
 		&:last-child
 			margin-right: 0
+		svg
+			width: 14px
+			height: 14px
+			fill: #f9a450
 
