--- a/src/sass/partials/_table-grid.sass
+++ b/src/sass/partials/_table-grid.sass
@@ -30,6 +30,7 @@
 		&:after
 			content: ""
 			+coverdiv
+			background-color: #FFF
 			background-image: $gradient
 			opacity: 0
 			z-index: 0
@@ -86,10 +87,10 @@
 			margin-right: 0
 
 	&__overlay-icon
-		width: 15px
-		height: 15px
+		width: 16px
+		height: 16px
 		svg
-			width: 15px
-			height: 15px
+			width: 16px
+			height: 16px
 			fill: #fff
 
