--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -11,4 +11,10 @@ title: Index page
 	{% include "partials/_testimonials.html" %}
 	{% include "partials/_screenshots-gallery.html" %}
 
+	<div class="btn btnTO" style="display: none"><span>To top</span></div>
+
+{% endblock %}
+
+{% block scripts %}
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 {% endblock %}
