--- a/src/templates/partials/_latest-post.html
+++ b/src/templates/partials/_latest-post.html
@@ -30,11 +30,11 @@
 
 						<div class="card-post__bottom">
 							<div class="card-post__bottom-item">
-								<div class="card-post__bottom-item-icon"></div>
+								<div class="card-post__bottom-item-icon">{{mixins.icon('user')}}</div>
 								<div class="card-post__bottom-item-title">by Admin</div>
 							</div>
 							<div class="card-post__bottom-item">
-								<div class="card-post__bottom-item-icon"></div>
+								<div class="card-post__bottom-item-icon">{{mixins.icon('comment')}}</div>
 								<div class="card-post__bottom-item-title">126</div>
 							</div>
 						</div>
