--- a/src/templates/partials/_screenshots-gallery.html
+++ b/src/templates/partials/_screenshots-gallery.html
@@ -34,10 +34,10 @@
 														<a href="#" class="table-grid__overlay-title">Using Banner Stands To Increase Trade</a>
 														<div class="table-grid__overlay-box">
 															<a href="#" class="table-grid__overlay-item">
-																<div class="table-grid__overlay-icon"></div>
+																<div class="table-grid__overlay-icon">{{mixins.icon('search')}}</div>
 															</a>
 															<a href="#" class="table-grid__overlay-item">
-																<div class="table-grid__overlay-icon"></div>
+																<div class="table-grid__overlay-icon">{{mixins.icon('pin-paper')}}</div>
 															</a>
 														</div>
 													</div>
@@ -50,10 +50,10 @@
 														<a href="#" class="table-grid__overlay-title">Using Banner Stands To Increase Trade</a>
 														<div class="table-grid__overlay-box">
 															<a href="#" class="table-grid__overlay-item">
-																<div class="table-grid__overlay-icon"></div>
+																<div class="table-grid__overlay-icon">{{mixins.icon('search')}}</div>
 															</a>
 															<a href="#" class="table-grid__overlay-item">
-																<div class="table-grid__overlay-icon"></div>
+																<div class="table-grid__overlay-icon">{{mixins.icon('pin-paper')}}</div>
 															</a>
 														</div>
 													</div>
@@ -68,10 +68,10 @@
 														<a href="#" class="table-grid__overlay-title">Using Banner Stands To Increase Trade</a>
 														<div class="table-grid__overlay-box">
 															<a href="#" class="table-grid__overlay-item">
-																<div class="table-grid__overlay-icon"></div>
+																<div class="table-grid__overlay-icon">{{mixins.icon('search')}}</div>
 															</a>
 															<a href="#" class="table-grid__overlay-item">
-																<div class="table-grid__overlay-icon"></div>
+																<div class="table-grid__overlay-icon">{{mixins.icon('pin-paper')}}</div>
 															</a>
 														</div>
 													</div>
@@ -86,10 +86,10 @@
 												<a href="#" class="table-grid__overlay-title">Using Banner Stands To Increase Trade</a>
 												<div class="table-grid__overlay-box">
 													<a href="#" class="table-grid__overlay-item">
-														<div class="table-grid__overlay-icon"></div>
+														<div class="table-grid__overlay-icon">{{mixins.icon('search')}}</div>
 													</a>
 													<a href="#" class="table-grid__overlay-item">
-														<div class="table-grid__overlay-icon"></div>
+														<div class="table-grid__overlay-icon">{{mixins.icon('pin-paper')}}</div>
 													</a>
 												</div>
 											</div>
