--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -9,7 +9,6 @@
 		display: flex
 		width: 100%
 		height: 100%
-		padding: 0 15px
 		position: relative
 
 	&__slider
@@ -17,10 +16,13 @@
 		width: 100%
 		height: 100%
 
+	.slick-list, .slick-track
+		height: 100%
+
 	&__item
 		width: 100%
 		height: 100%
-		display: flex
+		display: flex !important
 		flex-direction: column
 		justify-content: center
 		align-items: center
