--- a/src/sass/layout/_block.sass
+++ b/src/sass/layout/_block.sass
@@ -72,6 +72,12 @@
 
 	&__content
 		width: 100%
+		position: relative
+
+	&__slider
+		position: relative
+		width: 100%
+
 
 	&__action
 		margin-top: 60px
