--- a/src/sass/partials/_btn.sass
+++ b/src/sass/partials/_btn.sass
@@ -16,10 +16,10 @@
 	line-height: 60px
 	text-transform: uppercase
 	text-decoration: none
+	background-color: $accent
 	+tr
 	+h
 		cursor: pointer
-		background-color: $accent
 		&:before
 			opacity: 0
 	&:before
@@ -31,8 +31,11 @@
 		+tr
 
 	&--transparent
+		background-color: transparent
 		box-shadow: inset 0 0 0 2px #FFF
 		+h
+			color: #FFF
+			background-color: $accent
 			box-shadow: inset 0 0 0 2px $accent
 
 		&:before
