--- a/src/sass/partials/_hero-slider-controls.sass
+++ b/src/sass/partials/_hero-slider-controls.sass
@@ -3,14 +3,33 @@
 	top: 0
 	bottom: 0
 	left: 100px
+	width: 40px
 	margin: auto 0
 	display: flex
 	align-items: center
 	flex-direction: column
 	justify-content: center
 
+	&__item-container
+		&.slick-current
+			.hero-slider-controls__item
+				opacity: 1
+				transform: scale(2) rotate(90deg)
+				position: relative
+				pointer-events: none
+				&:after
+					cursor: default
+					content: ""
+					position: absolute
+					right: -50px
+					top: 0
+
 	&__item
-		margin-bottom: 40px
+		height: 40px
+		width: 40px
+		display: flex
+		align-items: center
+		justify-content: center
 		color: white
 		font-family: $fa
 		font-size: 24px
@@ -23,8 +42,6 @@
 		+h
 			cursor: pointer
 			opacity: 1
-		&:last-child
-			margin-bottom: 0
 		&.active
 			opacity: 1
 			transform: scale(2) rotate(90deg)
