--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -1,4 +1,4 @@
-{% import "partials/_mixins.html" as mixins %}
+{% import "./_mixins.html" as mixins %}
 <!doctype html>
 <html>
 <head>
@@ -9,7 +9,8 @@
   <meta name="theme-color" content="#fff"/>
   <meta name="format-detection" content="telephone=no"/>
   <link rel="stylesheet" media="all" href="css/app.css"/>
-  {# {% include "../partials/_media-tags.html" %} #}
+
+  {# {% include "./_media-tags.html" %} #}
 </head>
 <body>
 
@@ -20,6 +21,9 @@
   <!-- END content -->
 
   <!-- BEGIN scripts -->
+  {% include "./_scripts.html" %}
+  {% block scripts %}
+  {% endblock %}
   <script type="text/javascript" src="js/app.js"></script>
   <!-- END scripts -->
 
