--- a/src/templates/partials/_hero.html
+++ b/src/templates/partials/_hero.html
@@ -1,7 +1,9 @@
 <div class="hero">
 	<div class="hero__container">
 
-		<div class="hero__slider js-home-hero-slider-1">
+		<div class="hero__slider js-slider-hero">
+
+			{% for page in range(0, 3) %}
 
 			<div class="hero__item">
 				<img src="" alt="" class="hero__bg" />
@@ -11,12 +13,16 @@
 				<a href="" class="hero__action btn"><span>more About us</span></a>
 			</div>
 
+			{% endfor %}
+
 		</div>
 
-		<div class="hero-slider-controls js-home-hero-slider-2">
-			<div class="hero-slider-controls__item">01</div>
-			<div class="hero-slider-controls__item active">02</div>
-			<div class="hero-slider-controls__item">03</div>
+		<div class="hero-slider-controls js-slider-hero-for">
+			{% for page in range(0, 3) %}
+			<div class="hero-slider-controls__item-container">
+				<div class="hero-slider-controls__item">0{{page}}</div>
+			</div>
+			{% endfor %}
 		</div>
 
 		<div class="hero-socials">
