header and refactoring

--- a/src/sass/helpers/_variables.sass
+++ b/src/sass/helpers/_variables.sass
@@ -8,6 +8,7 @@ $bg: #1e1d32
 $bgd: #181728
 $bgb: #292845
 $gradient: linear-gradient(to right, rgba($accent, 0.64) 0%, $accent2 100%)
+$gradientNoTrnsprnt: linear-gradient(to right, $accent 0%, $accent2 100%)
 
 
 
