--- a/src/templates/blocks/_hero.html
+++ b/src/templates/blocks/_hero.html
@@ -10,7 +10,7 @@
 				<div class="hero__title">Welcome to Gamesplay </div>
 				<div class="hero__title hero__title--big">Online gaming site</div>
 				<div class="hero__subtitle">Pork chop pastrami meatball, picanha salami capicola drumstick tri-tip flank short loin strip steak prosciutto</div>
-				<a href="" class="hero__action btn"><span>more About us</span></a>
+				<a href="/about-us.html" class="hero__action btn"><span>more About us</span></a>
 			</div>
 
 			{% endfor %}
@@ -26,9 +26,9 @@
 		</div>
 
 		<div class="hero-socials">
-			<a href="" class="hero-socials__item">{{mixins.icon('facebook')}}</a>
-			<a href="" class="hero-socials__item">{{mixins.icon('twitter')}}</a>
-			<a href="" class="hero-socials__item">{{mixins.icon('google-plus')}}</a>
+			<a href="#" class="hero-socials__item">{{mixins.icon('facebook')}}</a>
+			<a href="#" class="hero-socials__item">{{mixins.icon('twitter')}}</a>
+			<a href="#" class="hero-socials__item">{{mixins.icon('google-plus')}}</a>
 		</div>
 
 	</div>
