--- a/src/templates/blocks/_upcoming-games.html
+++ b/src/templates/blocks/_upcoming-games.html
@@ -1,4 +1,4 @@
-<section class="block">
+<section class="block js-nav-trigger">
 	<div class="block__container">
 		<div class="block__head">
 			<div class="block__title" data-backword="COMING SOON">UpComing Games:</div>
