--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,15 +1,15 @@
 ---
-title: Index page
+title: Home
 ---
 {% extends "layouts/_layout.html" %}
 
 {% block content %}
 
-	{% include "partials/_hero.html" %}
-	{% include "partials/_upcoming-games.html" %}
-	{% include "partials/_latest-post.html" %}
-	{% include "partials/_testimonials.html" %}
-	{% include "partials/_screenshots-gallery.html" %}
+	{% include "blocks/_hero.html" %}
+	{% include "blocks/_upcoming-games.html" %}
+	{% include "blocks/_latest-post.html" %}
+	{% include "blocks/_testimonials.html" %}
+	{% include "blocks/_screenshots-gallery.html" %}
 
 	<div class="btn btnTO" style="display: none"><span>To top</span></div>
 
