--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -1,7 +1,8 @@
 .hero
 	width: 100%
-	height: 100vh
+	height: calc(100vh - 140px)
 	min-height: 500px
+	margin-top: 140px //coz fixed sidebar
 	display: flex
 	background-color: #151423
 
