--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -1,4 +1,3 @@
-{% import "./_mixins.html" as mixins %}
 <!doctype html>
 <html>
 <head>
@@ -13,6 +12,7 @@
   {# {% include "./_media-tags.html" %} #}
 </head>
 <body>
+  {% import "../macros/_icon.html" as mixins %}
 
   <!-- BEGIN content -->
   {% include "../partials/_header.html" %}
