--- a/src/sass/cards/_card-review.sass
+++ b/src/sass/cards/_card-review.sass
@@ -27,6 +27,8 @@
 		border-radius: 10px
 		background-color: #181728
 		position: relative
+		+r(480)
+			padding: 100px 20px 30px 20px
 		&:after
 			content: "‘‘"
 			color: #7c69e3
