--- a/src/sass/cards/_card-simple.sass
+++ b/src/sass/cards/_card-simple.sass
@@ -36,6 +36,8 @@
 		font-weight: 700
 		line-height: 28px
 		text-transform: uppercase
+		+r(480)
+			display: none
 
 	&__subtitle
 		color: #c2d4f8
@@ -44,3 +46,5 @@
 		font-weight: 700
 		line-height: 14px
 		text-transform: uppercase
+		+r(480)
+			display: none
