--- a/src/sass/partials/_logo.sass
+++ b/src/sass/partials/_logo.sass
@@ -22,7 +22,13 @@
 		font-weight: 700
 		line-height: 28px
 		text-transform: uppercase
+		white-space: nowrap
 		+ls(100)
+		+r(480)
+			margin-bottom: 0
+			font-size: 30px
+			line-height: 22px
+
 
 	&__subtitle
 		color: rgba(194,212,248,0.8)
@@ -31,5 +37,10 @@
 		font-weight: 700
 		line-height: 8px
 		text-transform: uppercase
+		white-space: nowrap
 		+ls(18)
+		+r(480)
+			display: none
+			font-size: 12px
+
 
