--- a/src/sass/partials/_slider-arrow.sass
+++ b/src/sass/partials/_slider-arrow.sass
@@ -36,10 +36,16 @@
 
 	&--prev
 		left: -55px
+		+r(1400)
+			left: 15px
+
 
 	&--next
-		right: -55px
 		+rotate(180)
+		right: -55px
+		+r(1400)
+			right: 15px
+
 
 	&.slick-disabled
 		opacity: 0.5
