--- a/src/templates/blocks/_latest-post.html
+++ b/src/templates/blocks/_latest-post.html
@@ -17,25 +17,27 @@
 							<img src="" alt="" class="card-post__img" />
 						</div>
 
-						<div class="card-post__content">
-							<div class="card-post__box">
-								<a href="#" class="card-post__tag">PS4</a>
-								<div class="card-post__date">MAR 14, 2018</div>
+						<div class="card-post__container">
+							<div class="card-post__content">
+								<div class="card-post__box">
+									<a href="#" class="card-post__tag">PS4</a>
+									<div class="card-post__date">MAR 14, 2018</div>
+								</div>
+
+								<div class="card-post__title">COW BILTONG PORK BELLY KIELBASA SHANKLE</div>
+
+								<p class="card-post__text">Turducken cupim hamburger beef ribs picanha, drumstick buffalo tri-tip cow. Turducken prosciutto shank pork chop.</p>
 							</div>
 
-							<div class="card-post__title">COW BILTONG PORK BELLY KIELBASA SHANKLE</div>
-
-							<p class="card-post__text">Turducken cupim hamburger beef ribs picanha, drumstick buffalo tri-tip cow. Turducken prosciutto shank pork chop.</p>
-						</div>
-
-						<div class="card-post__bottom">
-							<div class="card-post__bottom-item">
-								<div class="card-post__bottom-item-icon">{{mixins.icon('user')}}</div>
-								<div class="card-post__bottom-item-title">by Admin</div>
-							</div>
-							<div class="card-post__bottom-item">
-								<div class="card-post__bottom-item-icon">{{mixins.icon('comment')}}</div>
-								<div class="card-post__bottom-item-title">126</div>
+							<div class="card-post__bottom">
+								<div class="card-post__bottom-item">
+									<div class="card-post__bottom-item-icon">{{mixins.icon('user')}}</div>
+									<div class="card-post__bottom-item-title">by Admin</div>
+								</div>
+								<div class="card-post__bottom-item">
+									<div class="card-post__bottom-item-icon">{{mixins.icon('comment')}}</div>
+									<div class="card-post__bottom-item-title">126</div>
+								</div>
 							</div>
 						</div>
 
