--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -10,8 +10,11 @@ title: Home
 	{% include "blocks/_latest-post.html" %}
 	{% include "blocks/_testimonials.html" %}
 	{% include "blocks/_screenshots-gallery.html" %}
+	{% include "blocks/_pricing.html" %}
+	{% include "blocks/_faq.html" %}
+	{% include "blocks/_home-cta.html" %}
 
-	<div class="btn btnTO" style="display: none"><span>To top</span></div>
+	<!-- <div class="btn btnTO" style="display: none"><span>To top</span></div> -->
 
 {% endblock %}
 
