--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -1,10 +1,14 @@
 .hero
 	width: 100%
+	max-width: 100%
+	overflow: hidden
 	height: calc(100vh - 140px)
 	min-height: 500px
 	margin-top: 140px //coz fixed sidebar
 	display: flex
 	background-color: #151423
+	+r(370)
+		margin-top: 100px
 
 	&__container
 		display: flex
@@ -28,11 +32,19 @@
 		justify-content: center
 		align-items: center
 		position: relative
+		padding: 0 160px
+		+r(1000)
+			padding: 0 vw(1000, 160px)
 
-	&__bg
+	&__bg-container
+		z-index: -1
 		pointer-events: none
 		+coverdiv
+		+darken(black, 0.7)
+	&__bg
+		+coverdiv
 		+coverimg
+		z-index: -1
 
 	&__title
 		text-shadow: 0 2px 4.8px rgba(0, 0, 0, 0.3)
@@ -43,10 +55,16 @@
 		line-height: 54px
 		text-transform: uppercase
 		text-align: center
+		+r(1000)
+			font-size: vw(1000, 48px)
+			line-height: vw(1000, 54px)
 
 		&--big
 			font-size: 96px
 			line-height: 96px
+			+r(1000)
+				font-size: vw(1000, 96px)
+				line-height: vw(1000, 96px)
 
 	&__subtitle
 		margin: 40px 0 50px 0
@@ -57,6 +75,66 @@
 		font-weight: 400
 		line-height: 30px
 		text-align: center
+		+r(1000)
+			font-size: 16px
+			line-height: 24px
 
 	&__action
+
+	&__slider-dots
+		position: absolute
+		top: 0
+		bottom: 0
+		left: 100px
+		width: 40px
+		display: flex
+		flex-direction: column
+		height: 100%
+		justify-content: center
+		align-items: center
+		+r(1000)
+			left: 15px
+		+r(375)
+			left: 5px
+
+		ul
+			display: flex
+			align-items: center
+			flex-direction: column
+			justify-content: center
+
+		li
+			height: 40px
+			width: 40px
+			display: flex
+			align-items: center
+			justify-content: center
+
+			transform: scale(1) rotate(90deg)
+			opacity: 0.8
+			+r(375)
+				font-size: 18px
+				height: 30px
+				width: 30px
+
+			+tr
+			+h
+				cursor: pointer
+				opacity: 1
+			&.slick-active
+				opacity: 1
+				transform: scale(2) rotate(90deg)
+				position: relative
+				pointer-events: none
+
+
+		div
+			color: white
+			font-family: $fa
+			font-size: 24px
+			font-weight: 700
+			line-height: 20px
+			text-transform: uppercase
+			background-color: transparent
+
 
