--- a/src/sass/blocks/_upcoming-games.sass
+++ b/src/sass/blocks/_upcoming-games.sass
@@ -6,20 +6,27 @@
 		width: 100%
 		margin-bottom: 85px
 		position: relative
+		+r(480)
+			margin-bottom: 0
 
 	&__top-slider
 		display: flex
 		align-items: flex-start
 		justify-content: space-between
 		margin: 0 -60px
+		+r(1400)
+			margin: 0
+			width: 100%
 
 	&__top-item
-		// width: 100%
-		// max-width: 25%
-		// flex: 25%
 		display: flex !important
 		justify-content: center
 		padding: 0 60px
+		+r(768)
+			display: block !important
+			min-width: 180px
+			width: 100%
+			padding: 0
 		&.slick-current
 			.card-simple
 				@extend .card-simple.active
@@ -31,7 +38,11 @@
 	&__bottom-slider
 		display: flex
 		margin: 0 -60px
+		+r(1300)
+			margin: 0
 
 	&__bottom-item
 		width: 100%
 		padding: 0 60px
+		+r(1300)
+			padding: 0
