--- a/src/sass/cards/_card-post.sass
+++ b/src/sass/cards/_card-post.sass
@@ -5,6 +5,10 @@
 	display: flex
 	flex-direction: column
 	background-color: #292845
+	+r(1200)
+		flex-direction: row
+	+r(768)
+		position: relative
 
 	&--2
 		.card-post__tag
@@ -21,18 +25,42 @@
 
 	&__img-container
 		width: 100%
+		max-width: 370px
 		height: 370px
 		position: relative
 		background-color: #a1a1a1
+		+r(768)
+			+coverdiv
+			+coverimg
+			max-width: 100%
+			z-index: 0
+		&:after
+			+r(768)
+				content: ""
+				+coverdiv
+				background-color: rgba(0, 0, 0, 0.75)
 
 	&__img
 		+coverdiv
 		+coverimg
 
+	&__container
+		+r(1200)
+			width: 100%
+			display: flex
+			flex-direction: column
+			justify-content: space-between
+		+r(768)
+			z-index: 1
+
 	&__content
 		display: flex
 		flex-direction: column
 		padding: 60px
+		+r(900)
+			padding: 30px
+		+r(480)
+			padding: 15px
 
 	&__box
 		width: 100%
@@ -85,10 +113,13 @@
 		display: flex
 		justify-content: space-between
 		border-top: 1px solid rgba(255, 255, 255, 0.1)
+		+r(900)
+			padding: 30px
+		+r(480)
+			padding: 15px
 
 	&__bottom-item
 		display: flex
-
 
 	&__bottom-item-icon
 		width: 15px
