--- a/src/sass/partials/_hero-socials.sass
+++ b/src/sass/partials/_hero-socials.sass
@@ -8,6 +8,11 @@
 	align-items: center
 	flex-direction: column
 	justify-content: center
+	+r(1000)
+		right: 15px
+	+r(375)
+		right: 5px
+
 
 	&__item
 		width: 40px
@@ -16,6 +21,10 @@
 		margin-bottom: 30px
 		border-radius: 50%
 		padding: 12px
+		+r(375)
+			width: 30px
+			height: 30px
+			padding: 6px
 		svg
 			width: 100%
 			height: 100%
