--- a/src/sass/partials/_navigation.sass
+++ b/src/sass/partials/_navigation.sass
@@ -1,11 +1,21 @@
 .navigation
 	display: flex
 	align-items: center
+	+r(1200)
+		flex-direction: column
+		align-items: center
 
 	&__item
 		margin-right: 60px
+		+r(1366)
+			margin-right: 20px
+		+r(1200)
+			margin-right: 0
+			margin-bottom: 20px
 		&:last-child
 			margin-right: 0
+			+r(1200)
+				margin-bottom: 0
 
 	&__link
 		color: #FFF
