--- a/src/templates/blocks/_upcoming-games.html
+++ b/src/templates/blocks/_upcoming-games.html
@@ -18,7 +18,7 @@
 
 							<div class="card-simple">
 								<div class="card-simple__img-container">
-									<img src="" alt="" class="card-simple__img" />
+									<img src="./img/games/gow.jpg" alt="" class="card-simple__img" />
 								</div>
 								<div class="card-simple__title">GOD OF WAR</div>
 								<div class="card-simple__subtitle">mar 18-20, 2018</div>
@@ -74,7 +74,7 @@
 
 									<div class="card-full__col">
 										<div class="card-full__img-container">
-											<img src="" alt="" class="card-full__img" />
+											<img src="./img/games/gow.jpg" alt="" class="card-full__img" />
 										</div>
 									</div>
 
