--- a/src/templates/blocks/_footer.html
+++ b/src/templates/blocks/_footer.html
@@ -3,13 +3,13 @@
 
  		<div class="footer__row">
  			<div class="footer__logo">
- 				{% include "./_logo.html" %}
+ 				{% include "../partials/_logo.html" %}
  			</div>
 
 
  			<div class="footer__box">
  				<div class="footer__navigation">
- 					{% include "./_navigation-simple.html" %}
+ 					{% include "../partials/_navigation-simple.html" %}
  				</div>
 
  				<div class="footer__text">Andouille landjaeger flank boudin. Jerky cupim alcatra sirloin porchetta, turkey short ribs leberkas doner bacon pancetta buffalo.</div>
