--- a/src/sass/base/_reset.sass
+++ b/src/sass/base/_reset.sass
@@ -22,6 +22,7 @@ textarea
     -webkit-appearance: none
 input[type="submit"],
 button
+    background-color: transparent
     cursor: pointer
     &::-moz-focus-inner
         padding: 0
@@ -32,6 +33,7 @@ input, button
     margin: 0
     padding: 0
     border: 0
+    border-radius: 0
 div, input, textarea, select,button,
 h1,h2,h3,h4,h5,h6,a,span,a:focus
     outline: none
