--- a/src/templates/blocks/_home-cta.html
+++ b/src/templates/blocks/_home-cta.html
@@ -12,7 +12,7 @@
 					<div class="home-cta__form-item">
 						<input type="text" class="home-cta__input" placeholder="Enter your Email address here" />
 					</div>
-					<button class="home-cta__action">{{mixins.icon('envelope')}}</button>
+					<button class="home-cta__action">{{mixins.icon('email')}}</button>
 				</form>
 			</div>
 
